# rex-blog-v2

./: .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
migrations/: 20221216125031_init.down.sql  20221216125031_init.up.sql  20221216125521_create-tables.down.sql  20221216125521_create-tables.up.sql  20221217132710_create-tag-map.down.sql  20221217132710_create-tag-map.up.sql
page-frontend/: Cargo.toml
page-frontend/src/: common_handlers.rs  errors.rs  lib.rs  shared_state.rs  transfer.rs
page-frontend/src/demonstration/: handlers_pages.rs  mod.rs  routers.rs
page-frontend/src/management/: forms.rs  handlers_logic.rs  handlers_pages.rs  mod.rs  routers.rs
page-frontend/templates/demonstration/: article.html  articles.html  base.html  index.html
page-frontend/templates/demonstration/categories/: categories.html
page-frontend/templates/demonstration/tags/: tags.html
page-frontend/templates/management/: base.html  msg.index  toolbar.html
page-frontend/templates/management/articles/: add.html  edit.html  index.html  query.html
page-frontend/templates/management/categories/: add.html  edit.html  index.html
page-frontend/templates/management/tags/: add.html  edit.html  index.html
svc-backend/: Cargo.toml
svc-backend/src/: error.rs  lib.rs
svc-backend/src/service/: implements.rs  mod.rs  tests.rs
svc-backend/src/storage/: implements.rs  mod.rs  models.rs  tests.rs  traits.rs
util-pb/: Cargo.toml  build.rs
util-pb/proto/: models.proto
util-pb/src/: lib.rs  transfer.rs  util.rs
util-pb/src/pb/: models.rs
