[package]
name = "page-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers"] }
axum-macros = "0.3.0"
tokio = { version = "1.23", features = ["full"] }
futures = "0.3.25"
tonic = "0.8"
tower-http = { version = "0.3", features = ["fs", "trace"] }

thiserror = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3.16"

dotenv = "0.15.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tera = "1"

util-pb = { path = "../util-pb" }
svc-backend = { path = "../svc-backend" }
